--- a/templates/startElec.html
+++ b/templates/startElec.html
@@ -9,9 +9,9 @@
                 <div>
                     <select name="post" >
                         <option value="" disabled selected>--select post--</option>
-                        <option value="BUESA pro">BUESA pro</option>
-                        <option value="BUSA president">BUSA president</option>
-                        <option value="Tech pro">Tech pro</option>
+                        <option value="general secretary">General Secretary</option>
+                        <option value="social director">Social Director</option>
+                        <option value="Tech pro">Tech p</option>
                     </select>
                     <input name="post" type="text" placeholder="--custom post"/>
                 </div>
